[Mac][Material Design] Fix MD bookmarks button focus ring regression.

After the Material Design changes to the bookmarks bar the focus rings
no longer align with the button images.

R=avi@chromium.org
BUG=613124

Review-Url: https://codereview.chromium.org/2030233003
Cr-Commit-Position: refs/heads/master@{#397598}

Former-commit-id: b8e8a8f7a7fc3f66e0bc149602d8abac251b0304